--- a/1.Functions.md
+++ b/1.Functions.md
@@ -1,3 +1,7 @@
 # Basic function
 
 ![image](https://github.com/user-attachments/assets/4b32d22b-16c2-459c-98e3-209d80b57187)
+
+![image](https://github.com/user-attachments/assets/9f515b67-332c-4c7d-969a-ea0740bf6be0) ![image](https://github.com/user-attachments/assets/e20c9ebc-4184-41f7-9b23-5cbcfe303201)
+
+
