--- a/1.Functions.md
+++ b/1.Functions.md
@@ -5,3 +5,4 @@
 ![image](https://github.com/user-attachments/assets/9f515b67-332c-4c7d-969a-ea0740bf6be0) ![image](https://github.com/user-attachments/assets/e20c9ebc-4184-41f7-9b23-5cbcfe303201)
 
 
+![image](https://github.com/user-attachments/assets/4a7f24f4-1647-4476-a6aa-2975f4295289)
